# my_first_game

./: .cproject  .gitignore  .project  Aim.cpp  Aim.d  Aim.h  Aim.hpp  Black_king.cpp  Black_king.h  Black_pawn.cpp  Black_pawn.h  CMakeLists.txt  Character.cpp  Character.hpp  Circle.cpp  Circle.h  Clipper.cpp  Clipper.d  Clipper.h  Clipper.hpp  Collision.cpp  Collision.hpp  Cyan_king.cpp  Cyan_king.d  Cyan_king.h  Cyan_pawn.cpp  Cyan_pawn.d  Cyan_pawn.h  Fence.cpp  Fence.d  Fence.h  Fence.hpp  Filled_circle.cpp  Filled_circle.h  Game.cpp  Game.d  Game.h  Game.hpp  Game_run.hpp  Game_update_aim.hpp  (+67 more)
Game.Objects/: Aim.cpp  Fence.h  Pawn_container.cpp
Game_objects/: Aim.cpp  Aim.d  Aim.h  Clipper.d  Clipper.h  Fence.cpp  Fence.d  Fence.h  King_cyan.cpp  King_cyan.d  King_cyan.h  King_magenta.cpp  King_magenta.d  King_magenta.h  Pawn.cpp  Pawn.d  Pawn.h
Math/: Collision.cpp  Collision.h  Vector.cpp  Vector.h  math.cpp  math.h
Shape/: Circle.cpp  Circle.d  Circle.h  Line.cpp  Line.d  Line.h  Rectangle.cpp  Rectangle.d  Rectangle.h  Triangle.cpp  Triangle.d  Triangle.h
game-objects/: Aim.h  Clipper.h  King_cyan.cpp  King_cyan.h  King_magenta.cpp  King_magenta.h  Pawn.h  Pawn_container.h
math/: Circle.cpp  Circle.h  Collision.cpp  Collision.d  Collision.h  Line.cpp  Line.h  Math.cpp  Math.h  Matrix.cpp  Matrix.h  Rectangle.h  Triangle.cpp  Triangle.h  Vector.cpp  Vector.d  Vector.h  math.d
old_version/: Makefile
old_version/Game_objects/: Clipper.cpp  Clipper.h  King.h  King_cyan.cpp  King_magenta.h  Pawn.cpp  (+1 more)
test/: circle_vs_rectangle.js  class.js  test.html
(+4 files in other folders)
